third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/mutate_with_borrowed_loc_invalid.old.exp

Diagnostics:
error: cannot assign to borrowed local `x`
  ┌─ tests/reference-safety/v1-borrow-tests/mutate_with_borrowed_loc_invalid.move:5:9
  │
4 │         let y = &x;
  │                 -- previous local borrow
5 │         x = 0;
  │         ^^^^^ attempted to assign here
6 │         y;
  │         - conflicting reference `y` used here
